Adjusted lightnesses for dark mode; corrected native Firefox drop shadow colour for dark mode; added border to selected / hover tab.

--- a/tabColour.css
+++ b/tabColour.css
@@ -47,4 +47,20 @@ tab[pinned] .tab-background {
 tab[selected] .tab-background, tab:hover .tab-background {
   --firehacks-lightness-from: 60%;
   --firehacks-lightness-to: 80%;
+  border: solid 1px black;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4) !important;
+}
+
+@media (prefers-color-scheme: dark) {
+  tab .tab-background {
+    --firehacks-lightness-from: 20%;
+    --firehacks-lightness-to: 40%;
+  }
+
+  tab[selected] .tab-background, tab:hover .tab-background {
+    --firehacks-lightness-from: 30%;
+    --firehacks-lightness-to: 50%;
+    border: solid 1px white;
+    box-shadow: 0px 0px 4px rgba(255, 255, 255, 0.4) !important;
+  }
 }
